# dnd-character

./: .gitignore  Cargo.toml  build.rs
schemas/: dnd5eapi.graphql
src/: abilities.rs  classes.rs  lib.rs
src/api/: abilities.rs  classes.rs  mod.rs  shared.rs  spells.rs
tests/: api_test.rs  level.rs  schema_0_13_17.json  schema_compact.rs
