[package]
name = "dnd-character"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["DreamingCodes"]
description = "A Dungeons and Dragons character generator"
homepage = "https://dreaming.codes"
repository = "https://github.com/Dreaming-Codes/dnd-character"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cynic = { version = "3.3.0", features = ["http-reqwest"], optional = true }
reqwest = { version = "0.11.22", optional = true }
serde = { version = "1.0.192", optional = true }
serde_json = { version = "1.0.108", optional = true }
#ndm = "0.9.10" #dice library
#rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros"] }
futures = "0.3.29"

[build-dependencies]
cynic-codegen = { version = "3.3.0", optional = true }

[features]
default = ["api-rustls", "serde"]
api = ["dep:cynic-codegen", "dep:cynic", "dep:reqwest"]
api-rustls = ["api", "reqwest/rustls-tls"]
serde = ["dep:serde", "dep:serde_json"]
