[package]
name = "dnd-character"
version = "0.9.5"
edition = "2021"
license = "MIT"
authors = ["DreamingCodes"]
description = "A Dungeons and Dragons character generator"
homepage = "https://dreaming.codes"
repository = "https://github.com/Dreaming-Codes/dnd-character"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
cynic = { version = "3.4.3", features = ["http-reqwest", "serde_json"], optional = true }
lazy_static = "1.4.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", optional = true }
serde = { version = "1.0.197", optional = true }
serde_json = { version = "1.0.114", optional = true }
thiserror = "1.0.57"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros"] }
futures = "0.3.30"

[build-dependencies]
cynic-codegen = { version = "3.4.3", optional = true }

[features]
default = ["api-rustls", "serde"]
api = ["dep:cynic-codegen", "dep:cynic", "dep:reqwest"]
api-rustls = ["api", "reqwest/rustls-tls"]
serde = ["dep:serde", "dep:serde_json"]
